<resources>
    <string name="app_name">Tn Troc</string>
    <string name="facebook_app_id">352626055285076</string>
    <string name="fb_login_protocol_scheme">fb352626055285076</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="this_is_a_string">This is a String</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="invalid_phone_number">Numero invalide</string>
    <string name="valid_phone_number">Numero Valide</string>
    <string name="this_link_is_for_test">this link is for test</string>
    <string name="disable">Désactiver ce CV</string>
    <string name="rationale_doc_picker">We need this pemission to read documents from device.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, tritani suscipit sea id. Dico eloquentiam et sea, movet intellegam at pri. In vis natum gubergren efficiendi. Esse integre vivendum nec te. Modus iusto sententiae duo ut, mei iudico graeci nostrud eu, mundi exerci repudiare ei pri. Mundi alterum facilisi ne mel, quas placerat hendrerit ei mea, hinc habeo illud ei pri.</string>
    <string name="lorem_ipsum2">Thanks for the update and for the record I have to go to the store and get some rest and feel better soon.</string>
    <string name="lorem_ipsum3">Lorem ipsum dolor sit amet, vel at aeque graeci intellegat. Modus utinam mea ei, ut illum ponderum vim. Ridens tractatos.</string>
    <string name="lorem_ipsum4">Possim discere alienum qui ei, per ex moderatius vituperatoribus. Justo consul minimum eum.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgbutton">imgButton</string>
    <string name="details">Détails</string>
    <string name="apropos">À propos de moi</string>
    <string name="username">Username</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string-array name="categories">
        <item>Selectionner votre Categorie</item>
        <item>Accessoire</item>
        <item>Ordinateur</item>
        <item>Telephone</item>
    </string-array>
    <string-array name="actions">
        <item>Achats</item>
        <item>Demandes</item>
    </string-array>
    <string name="google_plus_title">Google Plus</string>
    <string name="google_maps_title">Maps</string>
    <string name="google_messenger_title">Messenger</string>
    <string name="question">Do you like Dialog Plus?</string>
    <string name="button_like">I like it</string>
    <string name="button_love">I love it</string>
    <string name="view_holder">View Holder</string>
    <string name="list_holder">List Holder</string>
    <string name="grid_holder">Grid Holder</string>
    <string name="show_header">Show header</string>
    <string name="show_footer">Show footer</string>

    <string name="dialog_title">Dialog setup:</string>
    <string name="footer">Footer</string>
    <string name="header">Header</string>
    <string name="header_title">Your title</string>
    <string name="header_sample">SAMPLE HEADER</string>
    <string name="footer_button_close">CLOSE</string>
    <string name="footer_button_confirm">CONFIRM</string>
    <string name="footer_sample">SAMPLE FOOTER</string>
    <string name="button_bottom">Bottom</string>
    <string name="button_center">Center</string>
    <string name="button_top">Top</string>
    <string name="echange">Echange</string>
    <string name="achter">Acheter</string>
    <string name="operations">Quelle opération voulez-vous faire ?</string>
    <string name="confimer">Confimer</string>

    <string name="label1">This is an example {fa-smile-o} {fa-thumbs-o-up}</string>
    <string name="label2">{fa-font-awesome} Font Awesome</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_name" translatable="true">MyNotifications</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
