<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
    >

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operations"
            android:textColor="@android:color/black"
            android:textSize="@dimen/header_text_size"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <LinearLayout
            android:id="@+id/buttonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

        <Button
                android:id="@+id/btn_achat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/achter"
                android:textColor="@color/white"
                android:background="@color/button_orange"
                android:textSize="@dimen/button_text_size"/>

        <Button
                android:id="@+id/btn_echange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/echange"
                android:textColor="@color/white"
                android:background="@color/button_orange"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/button_text_size"/>
    </LinearLayout>

</LinearLayout>

